--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ android {
 
 dependencies {
 
+    //google
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+
     //room
     implementation "android.arch.persistence.room:runtime:1.1.1"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
